# ENFIRE_UI_Testing_Toolkit

./: $scriptPath.bak  .gitignore  ENFIRE 11.0 Test Procedure 04 - Explosive Hazard Spot Report.xlsm  ENFIRE 11.0 Test Procedure 05 - Ford.xlsx  README.md  build_log.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_and_deploy.bat  setup_and_deploy.ps1  setup_and_deploy2.bat  setup_and_deploy_classic.bat  ~$ENFIRE 11.0 Test Procedure 04 - Explosive Hazard Spot Report.xlsm
automation/: automation_ids.json  export_automation_ids.py
data/: ui_settings.json
docs/: enfire_automation_id_contract.md  explorer_automation.md  refactor_cli_calibration_plan.md  roadmap.md  semantic_testing.md
docs/tools/: README.md  appium_capabilities.py  setup.md
ui_testing/: __init__.py  action.py  ai_summarizer.py  dialogs.py  environment.py  gui.py  player.py  recorder.py  settings.py  testplan.py  ui_settings.json  util.py
ui_testing/app/: __init__.py  configuration.py  environment.py  settings.py
ui_testing/automation/: __init__.py  action.py  explorer.py  flake_tracker.py  locator.py  player.py  recorder.py  state_snapshots.py
ui_testing/automation/driver/: __init__.py  appium.py  controls.py  core.py  exceptions.py
ui_testing/cli/: __init__.py
ui_testing/data/: __init__.py  flake_stats.json  ui_settings.json
ui_testing/services/: __init__.py  ai_summarizer.py  testplan.py
ui_testing/tests/: smoke.py
ui_testing/tools/: calibration.py
ui_testing/ui/: app.py  background.py  dialogs.py  inspector.py  notes.py  panels.py  settings_dialog.py
(+117 files in other folders)
