[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
known_first_party = ["ui_testing", "automation"]
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "TID",
    "Q",
    "ANN",
]
ignore = [
    "ANN101",
    "ANN102",
]
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["ui_testing", "automation"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
plugins = []
